# project-cai

./: package-lock.json  package.json  tailwind.config.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001__initial_schema.sql  001_initial_schema.sql  002_security_schema.sql  003_add_index_voucher_entries.sql  003_add_voucher_date_index.sql  003_add_voucher_period_index.sql  004_add_voucher_index.sql
src-tauri/src/: auth.rs  commands.rs  db.rs  lib.rs  main.rs  ocr.rs  reports.rs
src-tauri/src/commands/: subjects.rs
src/assets/: style.css
src/layouts/: MainLayout.vue
src/router/: index.ts
src/stores/: app.ts
src/views/: Dashboard.vue
src/views/assets/: AssetDepreciation.vue  FixedAssetsList.vue
src/views/cashier/: BalanceAdjustment.vue  BankReconciliation.vue  BankStatement.vue
src/views/closing/: AutoTransferSettings.vue  PeriodEndCheck.vue  TransferPreview.vue  TrialBalance.vue
src/views/ledger/: AuxiliaryModalDemo.vue  SubsidiaryLedgerDetail.vue  SubsidiaryLedgerQuery.vue  SubsidiaryLedgerSummary.vue  Verification.vue
src/views/report/: MonthlyReport.vue
src/views/settings/: SubjectSettings.vue
src/views/setup/: SetupBasic.vue  SetupOpening.vue  SetupSubject.vue
src/views/voucher/: AIInvoice.vue  BatchAudit.vue  BatchAuditEn.vue  BatchImport.vue  JournalEntry.vue  VoucherAudit.vue  VoucherEntry.vue
